# DashboardRaffinerie

./: .dockerignore  .gitignore  Dockerfile  README.md  bashrc  docker-compose.yml  docker-compose_preprod.yml  dockerfile  launcher_dev.sh  launcher_preprod.sh  manage.py  pyproject.toml  start.sh
dashboard/: settings.py
dashboard_app/: admin.py  data.py  models.py  odoo_api.py  qonto_api.py  serializers.py  urls.py  utils.py  views.py
dashboard_app/migrations/: 0001_initial.py  0002_contact_role.py  0002_initial.py  0002_previsioncost.py  0003_alter_pole_group.py  0003_alter_realcost_options_remove_realcost_amount_and_more.py  0003_badge_contact_badge.py  0003_remove_realcostinternspending_date_and_more.py  0003_rename_reveree_grant_referee.py  0003_role.py  0003_transaction_attachment_id.py  0004_alter_cost_type.py  0004_alter_prestationsventsrecettesint_group.py  0004_contact_id_odoo_contact_type.py  0004_delete_organigrame_alter_bankaccount_options_and_more.py  0004_remove_transaction_attachment_id_and_more.py  0004_rename_titeld_previsioncost_titled_and_more.py  0005_accountanalyticgroup_accountanalyticaccount.py  0005_alter_action_uuid_alter_contact_uuid_and_more.py  0005_alter_cost_options_and_more.py  0005_alter_cost_type.py  0005_alter_transaction_attachment_ids.py  0006_alter_organizationalchart_options_and_more.py  0006_configuration.py  0006_organizationalchart.py  (+9 more)
dashboard_user/: apps.py  models.py
django_raffdb/: asgi.py  settings.py  urls.py  wsgi.py
docker/: docker-compose.yml  dockerfile
source_julien/: outil_gestion_interne.html
tiqo/: apps.py  urls.py  views.py
(+128 files in other folders)
