[tool.poetry]
name = "dashboardraffinerie"
version = "0.1.0"
description = "Dashboard pour la Raffinerie"
authors = ["Code Commun & La Raffinerie"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
django-solo = "2.1.0"
django-extensions = "3.2.3"
werkzeug = "^2.3.6"
django-browser-reload = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
